[Win] Layout Test js/date-constructor.html is failing https://bugs.webkit.org/show_bug.cgi?id=140945

Reviewed by Per Arne Vollan.

Source/WTF:

* wtf/DateMath.cpp:
(WTF::calculateDSTOffset):
Move all shared calculations outside of the #if -- including the "jump forward a day" case that had been overlooked.

LayoutTests:

* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/200257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230774 268f45cc-cd09-0410-ab3c-d52691b4dbfc